[package]
name = "snakers"
version = "0.1.0"
authors = ["pythops <contact@pythops.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/pythops/snakers"
repository = "https://github.com/pythops/snakers"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
tui = { package = "ratatui", version = "0.20.1" }
